--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+
+body{
+   background-color: #FFF;
+   color: #333
+   font-family: verdana, arial, helvetica, sans-serif;
+   font-size: 13px;
+   line-height: 18px;
+   margin: 33px;
+}
+
+p{
+   font-size: 13px;
+   line-height: 18px;
+   margin: 33px;
+}
+
+.submit_box{
+   display: block;
+}
+
+.submit_buttom{
+   margin-top: 10px;
+}
+
+.submit_label{
+   margin-top: 10px;
+}
