[finish] bookの新規登録機能実装

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,14 @@ body{
    margin: 33px;
 }
 
+table{
+   display: table;
+   border-collapse: separate;
+   box-sizing: border-box;
+   text-indent: initial;
+   border-spacing: 2px;
+}
+
 p{
    font-size: 13px;
    line-height: 18px;
