--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,6 +11,7 @@
             <tr>
                <td><%= book.title %></td>
                <td><%= book.body %></td>
+               <td><%= link_to "show", "/books/#{book.id}"%></td>
             </tr>
          <% end %>
       </tbody>
