--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,9 @@
             <tr>
                <td><%= book.title %></td>
                <td><%= book.body %></td>
-               <td><%= link_to "show", "/books/#{book.id}"%></td>
+               <td><%= link_to "Show", book_path(book.id)%></td>
+               <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+               <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
             </tr>
          <% end %>
       </tbody>
@@ -19,6 +21,15 @@
 
 
 <h2>New book</h2>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <div class="submit_box">
    <%= form_with model: @book, url: '/books', method: :post do |f| %>
