--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,5 +2,5 @@
    <h1>ようこそBookersへ！</h1>
    <p><strong>Bookers</strong>では，様々な書籍に関するあなたの意見や</p>
    <p>印象を共有し交換することができます</p>
-   <p><%= link_to "start", '/books' %></p>
+   <p><%= link_to "Start", '/books' %></p>
 </body>
