[finish] バリテーションの実装

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -22,25 +22,24 @@
 
 <h2>New book</h2>
 
-<% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
 <div class="submit_box">
    <%= form_with model: @book, url: '/books', method: :post do |f| %>
-  <div class="submit_label">Title</div>
-  <%= f.text_field :title %>
+      <% if @book.errors.any? %>
+         <%= @book.errors.count %>件のエラーが発生しました
+         <ul>
+            <% @book.errors.full_messages.each do |message| %>
+               <li><%= message %></li>
+            <% end %>
+         </ul>
+      <% end %>
+     <div class="submit_label">Title</div>
+     <%= f.text_field :title %>
 
-  <div class="submit_label">Body</div>
-  <%= f.text_area :body %>
+     <div class="submit_label">Body</div>
+     <%= f.text_area :body %>
 
-  <div class="submit_buttom">
-  <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
+     <div class="submit_buttom">
+     <%= f.submit 'Create Book' %>
+     </div>
+   <% end %>
 </div>
