--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,7 @@
 <body>
+   <div class="flash">
+      <%= flash[:notice] %>
+   </div>
    <h1>Editing Book</h1>
       <% if @book.errors.any? %>
          <%= @book.errors.count %> errors prohibited this book from being saved:
