--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,7 @@
 <body>
+   <div class="flash">
+      <%= flash[:notice] %>
+   </div>
    <p>
       <strong>Title:</strong>
       <%= @book.title %>
