[finish] テスト完了

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,5 +25,7 @@
         </div>
       <% end %>
    </div>
+   <%= link_to "show", book_path(@book.id) %>
+   |
    <%= link_to "Back", books_path %>
 </body>
